# shux

./: .cursorignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  HOW_TO_TEST.md  LICENSE  LICENSE.AGPL-3.0  LICENSE.Apache-2.0  Makefile  NEXT-01.md  NEXT.md  NOTICE  README.md  README_zh-CN.md  SHUX-系统架构思维导图.md  api名称新旧对比.md  build.sh  build.su  build.sx  build.x  build_runner.su  build_runner.sx  build_runner.x  build_runtime.x  build_runtime_su.su  build_runtime_sx.sx  build_runtime_x.x  debug-check-command-hang.md  debug-context-cg002.md  debug-darwin-emit-oom.md  debug-hello-stage1-segv.md  debug-lsp-cpu-spin.md  debug-memory-spike.md  debug-regex-asm-crash.md  debug-relink-strict-glue-hang.md  debug-result-try-typeck.md  debug-shux-check-segv.md  debug_join  fmt_main_gen.c  (+21 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
analysis/: ABI与布局.md  C5-EXPR_CLOSURE-CTFE-scoping.md  C6-P0b-scope-audit.md  C7-plan-audit.md  FFI隔离.md  G-02e-physical-zero-c.md  G-02f-L2-x-o-pilot.md  G-02f-P2-link-abi-mega-RFC.md  (+579 more)
editors/tree-sitter-shux/: Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  功能增强.md
editors/tree-sitter-shux/bindings/c/: tree-sitter-shux.pc.in
editors/tree-sitter-shux/bindings/go/: binding_test.go  go.mod
editors/tree-sitter-shux/bindings/node/: binding.cc
editors/tree-sitter-shux/bindings/python/tree_sitter_shux/: __init__.py  binding.c
editors/tree-sitter-shux/bindings/rust/: lib.rs
editors/tree-sitter-shux/test/: sample.x
editors/tree-sitter-shux/test/corpus/: basic.x
(+7625 files in other folders)
